testsuite/tests/grammar/invalid_lkt/unknown_rule_annot.lkt
import lexer_example
import nodes

@with_lexer(foo_lexer) grammar foo_grammar {
    @main_rule rule1 <- Example("example")
    @foo rule2 <- Example("example")
}
